# arcade-youtube

./: README.md  worker.toml
app/: content_monitor.py  web_interface.py
app/templates/: index.html
youtube/: .gitignore  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  run.py
youtube/.github/workflows/: publish-to-pypi.yml
youtube/app/: .env.example  README.md  __init__.py  content_monitor.py  web_interface.py
youtube/app/templates/: index.html
youtube/arcade_youtube/: README.md  __init__.py
youtube/arcade_youtube/core/: __init__.py  backend.py  constants.py
youtube/arcade_youtube/tests/: .env.example  conftest.py  test_backend.py  test_youtube_client.py
youtube/arcade_youtube/tests/fixtures/cassettes/: test_fetch_activities.yaml  test_fetch_subscriptions.yaml  test_fetch_video_details.yaml  test_fetch_video_details_not_found.yaml  test_get_subscriptions.yaml  test_get_watch_history.yaml  test_get_watch_time_stats.yaml
youtube/arcade_youtube/tools/: constants.py  get_tokens.py  utils.py  youtube_client.py
youtube/evals/: eval_youtube.py
youtube/tests/: test_youtube.py
